V0.0.5 upgrade and some replica flows fixed
